// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`YearPickerInput Component YearPickerInput renders and changes with empty value 1`] = `
<div>
  <div
    class="container"
  >
    <div
      class="react-datepicker-wrapper"
    >
      <div
        class="react-datepicker__input-container "
      >
        <span
          aria-live="polite"
          class="react-datepicker__aria-live"
          role="alert"
        />
        <input
          autocomplete="off"
          class="input-year-picker-input"
          placeholder="TESTPLACEHOLDER"
          tabindex="0"
          type="text"
          value="2022"
        />
      </div>
    </div>
    <div />
  </div>
</div>
`;

exports[`YearPickerInput Component YearPickerInput renders and changes with empty value 2`] = `
<div>
  <div
    class="container"
  >
    <div
      class="react-datepicker-wrapper"
    >
      <div
        class="react-datepicker__input-container "
      >
        <span
          aria-live="polite"
          class="react-datepicker__aria-live"
          role="alert"
        />
        <input
          autocomplete="off"
          class="input-year-picker-input"
          placeholder="TESTPLACEHOLDER"
          tabindex="0"
          type="text"
          value=""
        />
      </div>
    </div>
    <div />
  </div>
</div>
`;

exports[`YearPickerInput Component YearPickerInput renders and changes with empty value 3`] = `
<div>
  <div
    class="container"
  >
    <div
      class="react-datepicker-wrapper"
    >
      <div
        class="react-datepicker__input-container "
      >
        <span
          aria-live="polite"
          class="react-datepicker__aria-live"
          role="alert"
        />
        <input
          autocomplete="off"
          class="input-year-picker-input"
          placeholder="TESTPLACEHOLDER"
          tabindex="0"
          type="text"
          value="2022"
        />
      </div>
    </div>
    <div />
  </div>
</div>
`;

exports[`YearPickerInput Component YearPickerInput renders handles changes 1`] = `
<div>
  <div
    class="container"
  >
    <div
      class="react-datepicker-wrapper"
    >
      <div
        class="react-datepicker__input-container "
      >
        <span
          aria-live="polite"
          class="react-datepicker__aria-live"
          role="alert"
        />
        <input
          autocomplete="off"
          class="input-year-picker-input"
          placeholder="TESTPLACEHOLDER"
          tabindex="0"
          type="text"
          value="1984"
        />
      </div>
    </div>
    <div />
  </div>
</div>
`;

exports[`YearPickerInput Component YearPickerInput renders handles changes 2`] = `
<div>
  <div
    class="container"
  >
    <div
      class="react-datepicker-wrapper"
    >
      <div
        class="react-datepicker__input-container "
      >
        <span
          aria-live="polite"
          class="react-datepicker__aria-live"
          role="alert"
        />
        <input
          autocomplete="off"
          class="input-year-picker-input"
          placeholder="TESTPLACEHOLDER"
          tabindex="0"
          type="text"
          value="1984"
        />
      </div>
    </div>
    <div />
  </div>
</div>
`;

exports[`YearPickerInput Component YearPickerInput renders in Error 1`] = `
<div>
  <div
    class="container"
  >
    <div
      class="react-datepicker-wrapper"
    >
      <div
        class="react-datepicker__input-container "
      >
        <span
          aria-live="polite"
          class="react-datepicker__aria-live"
          role="alert"
        />
        <input
          autocomplete="off"
          class="input-year-picker-input input-error"
          placeholder="YYYY"
          tabindex="0"
          type="text"
          value="2022"
        />
      </div>
    </div>
    <div />
  </div>
</div>
`;

exports[`YearPickerInput Component YearPickerInput renders in readOnly, highlighted without portal 1`] = `
<div>
  <div
    class="container input-year-picker-wrapper-read-only"
  >
    <div
      class="react-datepicker-wrapper"
    >
      <div
        class="react-datepicker__input-container "
      >
        <span
          aria-live="polite"
          class="react-datepicker__aria-live"
          role="alert"
        />
        <input
          autocomplete="off"
          class="input-year-picker-input-read-only field-highlighted"
          placeholder="YYYY"
          readonly=""
          tabindex="-1"
          type="text"
          value="2022"
        />
      </div>
    </div>
  </div>
</div>
`;
